style.css
@font-face {
  font-family: odin;
  src: url(./fonts/Norse-Bold.otf) format("opentype");
}

* {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font-family: inherit;
  vertical-align: baseline;
}

body {
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  width: min(1344px, 100vw);
  margin: 0 auto;
  background-color: rgb(247, 247, 253);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main {
  flex: 1.8 1.8 540px;
  background-color: white;
}

header {
  flex: 1 1 300px;
  min-height: 250px;
  background-image: url(./img/background-img.jpg);
  background-size: cover;
  position: relative;
}

.header-logo {
  position: sticky;
  top: 22%;
  margin-bottom: 3rem;
  font-family: odin;
  font-size: 90px;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 140px;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.header-logo > img {
  height: 120px;
}

header > a, header > a:visited, header > a:hover, header > a:active {
  position: absolute;
  bottom: 1%;
  font-size: 0.9rem;
  color: white;
  width: 100%;
  text-align: center;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  background-color: rgb(247, 247, 253);
}

.main-content-container {
  width: 78%;
  margin-left: 5%;
}

.bold {
  font-weight: bold;
}

.header-subtext {
  color: rgb(97, 96, 96);
  font-size: 0.8rem;
  margin: 0.5rem 0;
}

.large-font {
  font-size: 1.3rem;
}

p {
  margin: 1rem 0;
}

.darkgray {
  color: rgb(49, 49, 49);
}

.theme-form {
  margin: 3rem 0 2rem 0;
  background-color: white;
  padding: 1rem 0 1.5rem 0;
}

.form-controls {
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  column-gap: 4.5rem;
}

.input-textual {
  display: flex;
  flex-direction: column;
  align-items: left;
  margin-bottom: 0.7rem;
}

.input-textual label {
  color: rgb(84, 96, 107);
  font-size: 0.8rem;
  font-weight: bold;
  letter-spacing: 0.05rem;
}

.input-textual input {
  border: 2px solid #E5E7EB;
  border-radius: 2px;
  padding: 0.2rem 0.3rem 0.2rem 0.3rem;
}

.input-textual input:focus {
  border-color: blue;
  outline: none;
  box-shadow:  2px 2px 5px #777676;
}

.input-textual input.valid {
  border-color: green;
}

.input-textual input.invalid {
  border-color: red;
}

.input-textual input+span, .input-textual .input-pwd+span {
  position: relative;
}

.input-textual input.invalid+span::before, .input-pwd:has(input.invalid)+span::before {
  position: absolute;
  right: -1rem;
  top: -1.7rem;
  font-size: 1rem;
  content: "✖";
  color: red;
}

.input-textual input.valid+span::before, .input-pwd:has(input.valid)+span::before {
  position: absolute;
  right: -1rem;
  top: -1.7rem;
  font-size: 1rem;
  content: "✓";
  color: green;
}

.error-message {
  visibility: hidden;
  font-size: 0.7rem;
  color: red;
}

input.invalid ~ .error-message, .input-pwd:has(input.invalid) ~ .error-message {
  visibility: visible;
}

.input-pwd img{
  height: 1.5rem;
  width: 1.5rem;
  margin: 0 0 0 -1.8rem;
  vertical-align: text-top;
  cursor: pointer;
}

.input-textual {
  position: relative;
}

#password-requirements-container {
  bottom: 4.5rem;
  padding: 0.5ch 1ch;
  width: 32ch;
  position: absolute;
  background-color: rgb(247, 247, 253);
  border: 2px solid black;
  border-radius: 5px;
  z-index: 9999;
  visibility: hidden;
}

#password-requirements {
  list-style: none;  
}

#password-requirements li::before {
  content: "• ";
}

button[type="submit"] {
  padding: 0.8rem 3.5rem;
  background-color: #596D48;
  color: white;
  border-radius: 5px;
  box-shadow:  2px 2px 5px #a8a7a7;
  margin-bottom: 16px;
  transition: 200ms;
}

button[type="submit"]:hover {
  transform: scale(1.1);
}

.login, .login:active, .login:visited, .login:hover {
  color: #596D48;
  text-decoration: none;
}

.account-prompt {
  margin-bottom: 2rem;
}

